home-cluster/monitoring/ingressroute-alertmanager.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alerts.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alerts.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
